--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,16 +27,19 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '20'
-        cache: 'pnpm'
-    
-    - name: Install pnpm
+          node-version: '20'
+
+    - name: Setup pnpm
       uses: pnpm/action-setup@v2
       with:
         version: 9.10.0
     
+    - name: Verify pnpm
+      run: pnpm -v
+    
     - name: Install dependencies
       run: pnpm install
+
     
     - name: Generate Prisma Client
       run: cd apps/api && pnpm prisma:generate
