--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,28 +22,30 @@ jobs:
           --health-retries 5
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
     
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-          node-version: '20'
-
+        node-version: '20'
+    
     - name: Setup pnpm
       uses: pnpm/action-setup@v2
       with:
         version: 9.10.0
     
-    - name: Verify pnpm
+    - name: Verify pnpm installation
       run: pnpm -v
-    
+
     - name: Install dependencies
       run: pnpm install
 
-    
     - name: Generate Prisma Client
       run: cd apps/api && pnpm prisma:generate
-    
+      env:
+        DATABASE_URL: postgresql://test:test@localhost:5432/test_db
+
     - name: Run unit tests
       run: cd apps/api && pnpm test:unit
       env:
@@ -51,7 +53,7 @@ jobs:
         DATABASE_URL: postgresql://test:test@localhost:5432/test_db
         REDIS_HOST: localhost
         REDIS_PORT: 6379
-    
+
     - name: Run integration tests
       run: cd apps/api && pnpm test:integration
       env:
@@ -59,19 +61,19 @@ jobs:
         DATABASE_URL: postgresql://test:test@localhost:5432/test_db
         REDIS_HOST: localhost
         REDIS_PORT: 6379
-    
-    - name: Run all tests with coverage
+
+    - name: Run tests with coverage
       run: cd apps/api && pnpm test:coverage
       env:
         NODE_ENV: test
         DATABASE_URL: postgresql://test:test@localhost:5432/test_db
         REDIS_HOST: localhost
         REDIS_PORT: 6379
-    
+
     - name: Upload coverage reports
-      uses: codecov/codecov-action@v3
+      uses: codecov/codecov-action@v4
       with:
-        file: ./apps/api/coverage/lcov.info
+        files: ./apps/api/coverage/lcov.info
         flags: unittests
         name: codecov-umbrella
         fail_ci_if_error: false
@@ -99,19 +101,23 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: '20'
-        cache: 'pnpm'
     
-    - name: Install pnpm
+    - name: Setup pnpm
       uses: pnpm/action-setup@v2
       with:
         version: 9.10.0
+
+    - name: Verify pnpm
+      run: pnpm -v
     
     - name: Install dependencies
       run: pnpm install
-    
+
     - name: Generate Prisma Client
       run: cd apps/api && pnpm prisma:generate
-    
+      env:
+        DATABASE_URL: postgresql://test:test@localhost:5432/test_db
+
     - name: Start API server
       run: |
         cd apps/api
@@ -128,11 +134,12 @@ jobs:
     
     - name: Install k6
       run: |
-        sudo gpg -k
-        sudo gpg --no-default-keyring --keyring /usr/share/keyrings/k6-archive-keyring.gpg --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys C5AD17C747E3415A3642D57D77C6C491D6AC1D69
+        sudo apt-get update
+        sudo apt-get install -y gnupg2
+        curl -s https://dl.k6.io/key.gpg | sudo gpg --dearmor -o /usr/share/keyrings/k6-archive-keyring.gpg
         echo "deb [signed-by=/usr/share/keyrings/k6-archive-keyring.gpg] https://dl.k6.io/deb stable main" | sudo tee /etc/apt/sources.list.d/k6.list
         sudo apt-get update
-        sudo apt-get install k6
+        sudo apt-get install -y k6
     
     - name: Run load tests
       run: cd apps/api && k6 run tests/load/contract-analysis.js
@@ -140,7 +147,7 @@ jobs:
         API_URL: http://localhost:4000
     
     - name: Upload load test results
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       if: always()
       with:
         name: k6-results
@@ -149,7 +156,7 @@ jobs:
   docker-test:
     runs-on: ubuntu-latest
     needs: test
-    
+
     steps:
     - uses: actions/checkout@v4
     
@@ -157,24 +164,25 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: '20'
-        cache: 'pnpm'
     
-    - name: Install pnpm
+    - name: Setup pnpm
       uses: pnpm/action-setup@v2
       with:
         version: 9.10.0
     
     - name: Install dependencies
       run: pnpm install
-    
+
     - name: Generate Prisma Client
       run: cd apps/api && pnpm prisma:generate
+      env:
+        DATABASE_URL: postgresql://test:test@localhost:5432/test_db
     
     - name: Build Docker image
       run: |
         cd apps/api
         docker build -t contract-intelligence-api .
-    
+
     - name: Run Docker tests
       run: |
         cd apps/api
