--- a/.github/workflows/legal-agent-eval.yml
+++ b/.github/workflows/legal-agent-eval.yml
@@ -1,73 +1,65 @@
-name: Legal Agent RAGAS Evaluation
-
-on:
-  push:
-    branches: [ main, develop ]
-  pull_request:
-    branches: [ main, develop ]
-
-jobs:
-  evaluate:
-    runs-on: ubuntu-latest
-
-    services:
-      postgres:
-        image: ankane/pgvector:latest
-        env:
-          POSTGRES_DB: legal_db
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd "pg_isready -U postgres"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 10
-
-    steps:
+  name: Legal Agent RAGAS Evaluation
+  
+  on:
+    push:
+      branches: [ main, develop ]
+    pull_request:
+      branches: [ main, develop ]
+  
+  jobs:
+    evaluate:
+      runs-on: ubuntu-latest
+  
+      services:
+        postgres:
+          image: ankane/pgvector:latest
+          env:
+            POSTGRES_DB: legal_db
+            POSTGRES_USER: postgres
+            POSTGRES_PASSWORD: postgres
+          ports:
+            - 5432:5432
+          options: >-
+            --health-cmd "pg_isready -U postgres"
+            --health-interval 10s
+            --health-timeout 5s
+            --health-retries 10
+  
+      steps:
       - uses: actions/checkout@v4
-
-      - name: Set up Python
+  
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+  
+      - name: Install pnpm globally
+        run: npm install -g pnpm@9.10.0
+  
+      - name: Verify pnpm
+        run: pnpm -v
+  
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-
-      - name: Cache pip dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('apps/api/src/legal-agent/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-
+  
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r apps/api/src/legal-agent/requirements.txt
-
+  
       - name: Wait for PostgreSQL
         run: |
-          echo "Waiting for PostgreSQL..."
-          until pg_isready -h localhost -p 5432 -U postgres; do sleep 2; done
+          until pg_isready -h localhost -p 5432 -U postgres; do
+            echo "Waiting for PostgreSQL..."
+            sleep 2
+          done
           echo "PostgreSQL is ready!"
-
-      - name: Setup Node.js + Corepack
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-
-      - name: Enable Corepack & Install pnpm
-        run: |
-          corepack enable
-          corepack prepare pnpm@9.10.0 --activate
-          pnpm -v
-
-      - name: Install Node dependencies (if required by agent)
-        run: pnpm install
-
+  
       - name: Run unit tests
         run: python apps/api/src/legal-agent/test_agent.py
+
 
       - name: Run RAGAS Evaluation
         env:
